@@ -6,6 +6,8 @@ Version 1.3
 		- Added Expand All/Collapse All button
 		- Changed score_player.xml to use R.string for numeric scoring values
 		- Add Top Player and Add From Database now show game count
+		- If you edit a game, then hit back, then add a player and start the game, the old game data no longer appears.
+		- No longer able to edit games which have no score details (have been manually added to database)
 
 Version 1.23
 	Major:
